# Dresma_recommendation

./: .cursor_rules  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  abc.py  cloudbuild.yaml  dresma_training_pipeline.yaml  export_brand_ids.py  pyproject.toml  requirements-dev.txt  requirements.txt  temp.csv
frontend/: README.md  app.py  index.html
frontend/static/: app.js  index.html  style.css  styles.css
infra/bigquery/scheduled_queries/: spanner_to_bq_events.sql
infra/bigquery/schemas/: recommendation_events.json  user_actions.json
infra/bigquery/tables/: 002_recommendation_events.sql
infra/bigquery/views/: 001_v_training_dataset.sql
infra/cloud_run/: service.yaml
infra/pubsub/: subscriptions.yaml  topics.yaml
jobs/: __init__.py
jobs/cluster_trends/: Dockerfile  main.py
jobs/common/: __init__.py  engagement.py  spanner_util.py
jobs/engagement_snapshot/: Dockerfile  main.py
jobs/reclustering/: Dockerfile  clustering.py  main.py
jobs/signal_computation/: Dockerfile  engagement_score.py  main.py  velocity_trend_freshness.py
scripts/: backfill_full_image_embedding.py  compile_pipeline.py  manage_models.py  measure_baseline.py  migrate_brand_references.py  rollback_model.py  staging_first_time_setup.py  staging_heuristic_test.py
scripts/staging/: apply_migrations.ps1  my_test.json
src/dresma_ml/: __init__.py
src/dresma_rec/: main.py
tests/: conftest.py
tests/integration/: test_recommendations_api.py
tests/unit/: test_feature_assembler.py  test_heuristic_ranker.py  test_reclustering.py  test_signal_jobs.py
(+65 files in other folders)
